--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2'
 services:
   ide:
     image: psharkey/intellij:latest
-#    image: psharkey/netbeans-8.1:latest
+#    image: psharkey/netbeans-8.1:latest .
     environment:
       - DISPLAY=novnc:0.0
     depends_on:
